@@ -177,6 +177,10 @@ Release Notes
 
 - Various bug fixes and improvements.
 
+- As of this version, users should not provide a :guilabel:`Password` when 
+  using :manual:`Kerberos </core/kerberos/>` as the authentication mechanism. 
+
+
 |compass| 1.15
 --------------
 
